# finance

./: README.org  pyproject.toml
finance/: client.py  data.py
scripts/: upload_csv.py
