[tool.poetry]
name = "finance"
version = "0.1.0"
description = "Finance management tools"
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
xlrd = "^2.0.1"
requests = "^2.28.1"
tqdm = "^4.64.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
